objects/X7S_Event_Integration_Setting__mdt/X7S_Event_Integration_Setting__mdt.object-meta.xml
<CustomObject>
    <label>7S Event Integration Setting</label>
    <pluralLabel>7S Event Integration Settings</pluralLabel>
</CustomObject>