objects/X7S_Event_Integration_Setting__mdt/fields/API_Secret__c.field-meta.xml
<CustomField>
    <fullName>API_Secret__c</fullName>
    <description>Will be populated by owners external app settings</description>
    <label>API Secret</label>
    <type>TextArea</type>
</CustomField>