objects/X7S_Event_Integration_Setting__mdt/fields/Import_Unknown_Users__c.field-meta.xml
<CustomField>
    <fullName>Import_Unknown_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Unknown Users</label>
    <type>Checkbox</type>
</CustomField>