objects/X7S_Event_Integration_Setting__mdt/fields/Virtual_Platform__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Platform__c</fullName>
    <label>Virtual Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>